反射测试补充及其他调整